# BluetoothAudio

./: UniMeta.data
905y4/: 905y4.part1.rar  905y4.part2.rar  905y4.part3.rar  905y4.part4.rar  905y4.rar
datasheets/: AP6212 _ WiFi+Bluetooth 4.0+FM RX SIP Module-EDOM Technology - Your Best Solutions Partner.html
ndk_test/: CMakeLists.txt  build.bat  hello  hello.c
ref/: Bluetooth HFP Profile Overview.rar  Compile C Project NDK.rar  bt-ag.rar  ref.rar
scrcpy/: com.koushikdutta.vysor_4.2.2-1701658800_7dpi_15lang_be737910a53d47ce1866ffcc8efdc31b_apkmirror.com.apkm  com.koushikdutta.vysor_4.2.2-1701658800_minAPI19(nodpi)_apkmirror.com.apk
sources/: HevcReverseEngineering - Bluetooth MAP Development v4.0 (2).html  HevcReverseEngineering - Bluetooth MAP Development v4.0_0312_2.html  HevcReverseEngineering - Bluetooth MAP Development v4.0_0312_3.html  (+2 more)
sources/bt_hfp_chatd_c_android4.4_v3.2/: CMakeLists.txt  README.md
sources/bt_hfp_chatd_c_android4.4_v3.2/android_ndk/: build.sh
sources/bt_hfp_chatd_c_android4.4_v3.2/docs/: SETUP_ANDROID.md  SETUP_LINUX.md  WORKFLOW_OVERVIEW.md
sources/bt_hfp_chatd_c_android4.4_v3.2/src/: audio.h  audio_alsa.c  bt_mgmt.h  main.c
sources/bt_hfp_chatd_c_android4.4_v3.3/: CMakeLists.txt  README.md
sources/bt_hfp_chatd_c_android4.4_v3.3.4/: CMakeLists.txt  README.md  clean.sh
sources/bt_hfp_chatd_c_android4.4_v3.3.4/android_ndk/: build.sh
sources/bt_hfp_chatd_c_android4.4_v3.3.4/docs/: AUTOMATION_WORKFLOW.md  BUILD_FIXES_v3.3.3.md  BUILD_FIXES_v3.3.4.md  CONTROL_PROTOCOL.md  SETUP_ANDROID.md  UPDATE_NOTES_v3.2.md
sources/bt_hfp_chatd_c_android4.4_v3.3.4/service/linux/: bt_chatd.service
sources/bt_hfp_chatd_c_android4.4_v3.3.4/src/: audio_linux_raw.c  audio_opensles.c  bt_mgmt.c  bt_util.h  ctrl_server.c  ctrl_server.h  hfp_ag.c  sco_bridge.c  sco_bridge.h  state_machine.h
sources/bt_hfp_chatd_c_android4.4_v3.3/docs/: SETUP_ANDROID.md  SETUP_LINUX.md  UPDATE_NOTES_v3.3.md
sources/bt_hfp_chatd_c_android4.4_v3.3/src/: audio.h  audio_linux_raw.c  bt_util.c  cvsd.c  cvsd.h  hfp_ag.c  hfp_ag.h  main.c  sco_bridge.c  state_machine.c  state_machine.h
(+227 files in other folders)
